Fixed Mac commands; Fixed adb polling errors but still has long stacktrace